Canvas component and canvas settings component

--- a/crochet/src/app/canvas/canvas.component.html
+++ b/crochet/src/app/canvas/canvas.component.html
@@ -1,1 +1,5 @@
-<p>canvas works!</p>
+<canvas-settings-component #settingsComponent (settingsChangedEvent)="applySettings($event)"></canvas-settings-component>
+<br>
+<mat-divider></mat-divider>
+<br>
+<canvas #canvas></canvas>
