--- a/crochet/src/app/app.component.css
+++ b/crochet/src/app/app.component.css
@@ -1,11 +1,4 @@
-.result-container {
+h1, h2 {
     display: flex;
-    justify-content: space-between;
-    margin: 20px 10px 0;
-    max-width: 284px;
-}
-
-mat-slider {
-    max-width: 300px;
-    width: 100%;
+    justify-content: center;
 }
